# AgentDatabase

./: .gitignore  .rgignore  AGENTS.md  README.md  checksums.txt  功能清单.md  开发记录.md  模型参数文件.md
CodexSkills/registry/codex/persona-distiller/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGE_MANIFEST.json  README.md  ROADMAP.md  SECURITY.md  SKILL.md  THIRD_PARTY_NOTICES.md  VERIFICATION.md  checksums.sha256  handoff.md  install.ps1  install.py  install.sh  manifest.json  persona-registry-index.json  pyproject.toml  registry.yaml
CodexSkills/registry/codex/persona-distiller/agents/: openai.yaml
CodexSkills/registry/codex/persona-distiller/audit/: 10-round-improvement.md  2x6-review.md  research-notes.md
CodexSkills/registry/codex/persona-distiller/examples/: README.md
CodexSkills/registry/codex/persona-distiller/prompts/: blind-judge.md  claim-extractor.md  correction-handler.md  dual-agent-architect.md  dual-agent-skeptic.md  eval-anonymous-fidelity.md  eval-boundary.md  eval-capability-calibration.md  eval-contrast.md  eval-fact-preservation.md  eval-identity-routing.md  eval-known.md  eval-long-horizon.md  eval-planning-fidelity.md  eval-refusal-stop.md  eval-style-decoy.md  eval-task-completion.md  eval-token-efficiency.md  eval-tool-use.md  eval-trajectory.md  eval-voice.md  hypothesis-builder.md  intake.md  persona-builder.md  research-01-writings.md  research-02-conversations.md  research-03-expression.md  research-04-external.md  research-05-decisions.md  research-06-timeline.md  source-adjudicator.md  synthesizer.md  work-builder.md
(+2425 files in other folders)
